# Binance-Futures-OHLCV-Extractor

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  binance_futures_ohlcv_to_csv.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Financial Prompt Framework/: Output Code ChatGPT 5
code_output_example_by_model/: ChatGPT-5_code_example.py  Claude4_code_example.py  Gemini-2.5pro_code_example.py
docs/: CONSIDERATION_NOTES.md  EXECUTION_POLICY.md  FINANCIAL_PROMPT_FRAMEWORK.md  PROMPT_ARCHITECTURE.md
prompts/: README.md  evaluation_rubric.md  financial_framework_template.md
prompts/variants/: chatgpt_prompt.md  claude_prompt.md  gemini_prompt.md
result_output_example_by_model/: ChatGPT-5_print.md
src/binance_ohlcv_extractor/: cli.py  extractor.py
testing_validation_by_model/: ChatGPT-5.md  Claude_sonnet4.5.md  claude_sonnet4.5.md  test_parser.py
testing_validation_by_model/iterations/: Claude_sonnet4_5.md
